# InfraSentinel

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  start.json  tmp_start_change.py
.github/workflows/: ci.yml
a2a/: __init__.py  agent_card.json  server.py
apps/api/: Dockerfile  deps.py  main.py  schemas.py
apps/worker/: Dockerfile  __init__.py  activities.py  activities_execution.py  main.py
data/: README.md
eval/: promptfoo.yaml
eval/fixtures/: README.md
infra/: Dockerfile.agent  docker-compose.yml
infra/env/: .env.dev.example  .env.mock.example
infra/netbox/: seed_netbox.py
samples/: change_request.json  cv_outputs.json  netbox_expected_mapping.json
scripts/: gen_sample_images.py  run_api.py  run_worker.py
scripts/data/: download_roboflow_universe.md  download_textocr.py  generate_synth_patchpanel.py  prepare_open_images.md
scripts/dev/: _test_claude_urllib.py  create_env_dev.sh  dev_quickstart_claude.sh  ensure_env_mock.py  mock_quickstart.sh  test_claude.py  test_claude.sh  up_dev.sh  (+1 more)
services/: __init__.py  common.py
tests/: test_a2a_integration.py  test_a2a_schema.py  test_agents_mock.py  test_auth.py  test_cv_parsing.py  test_cv_quality.py  test_e2e_api_temporal.py  test_kafka.py  test_kafka_events.py  test_mcp_camera.py  test_mcp_cv.py  test_mcp_cv_tools.py  test_mcp_netbox.py  test_mcp_ticketing.py  test_mcp_transport.py  test_netbox_client.py  test_quality_metrics.py  test_state_machine.py  test_workflow.py  test_workflow_quality_gate.py  test_workflow_scenarios.py
(+47 files in other folders)
